feat(pet): Introduce openapirouter (#2)
* feat(pet): add repo-tools

* feat(pet): add build api server command

* feat(pet): repeat parameters per request

* feat(pet): add security

* feat(pet): incorporate openapirouter

* feat(pet): use openapirouter to handle input error
